--- a/theme/Clearness.css
+++ b/theme/Clearness.css
@@ -117,6 +117,62 @@ pre code {
     }
 }
 
+/*导航*/
+.BlogAnchor {
+	background: #f1f1f1;
+	padding: 10px;
+	line-height: 180%;
+	position: fixed;
+	right: 48px;
+	top: 48px;
+	border: 1px solid #aaaaaa;
+}
+.BlogAnchor p {
+	font-size: 18px;
+	color: #15a230;
+	margin: 0 0 0.3rem 0;
+	text-align: right;
+}
+.BlogAnchor .AnchorContent {
+	padding: 5px 0px;
+	overflow: auto;
+}
+.BlogAnchor li{
+	text-indent: 0.5rem;
+	font-size: 14px;
+	list-style: none;
+}
+.BlogAnchor li .nav_item{
+	padding: 3px;
+}
+.BlogAnchor li .item_h1{
+	margin-left: 0rem;
+}
+.BlogAnchor li .item_h2{
+	margin-left: 2rem;
+	font-size: 0.8rem;
+}
+.BlogAnchor li .nav_item.current{
+	color: white;
+	background-color: #5cc26f;
+}
+#AnchorContentToggle {
+	font-size: 13px;
+	font-weight: normal;
+	color: #FFF;
+	display: inline-block;
+	line-height: 20px;
+	background: #5cc26f;
+	font-style: normal;
+	padding: 1px 8px;
+}
+.BlogAnchor a:hover {
+	color: #5cc26f;
+}
+.BlogAnchor a {
+	text-decoration: none;
+}
+
 /*
 foundation.css
 Description: Foundation 4 docs style for highlight.js
